--- a/dashboard.css
+++ b/dashboard.css
@@ -22,20 +22,22 @@ body {
   font-family: 'Times New Roman', Times, serif;
   height: 120px;
   box-sizing: border-box;
+  position: fixed;
+  width: 100%;
 }
 
 .logo {
   width: 100px;
   height: auto;
   margin-right: 20px;
-  margin-left: 150px;
+  margin-left: 5px;
 }
 
 .header-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  line-height: 1.2;
+  line-height: 0.8;
 }
 
 .republic {
@@ -67,17 +69,19 @@ body {
   padding: 10px 0;
   gap: 10px; 
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 /* USER ICON INSIDE SIDEBAR */
 .user-icon {
   display: flex;
   align-items: center;
-  padding: 10px 20px;
-  gap: 10px;
+  padding: 10px 15px;
+  gap: 7px;
   font-weight: bold;
   color: black;
   margin-bottom: 20px; 
+  font-size: 15px;
 }
 
 .user-icon img {
