--- a/employees.css
+++ b/employees.css
@@ -1,11 +1,12 @@
-body {
+.body {
   font-family: Arial, sans-serif;
   background: #fff;
   margin: 0;
-  padding: 40px;
 }
 
-.container {
+
+
+.main-content {
   max-width: 960px;
   margin: auto;
   margin-top: 50px;
@@ -13,12 +14,20 @@ body {
   border: 2px solid #ccc;
   border-radius: 10px;
   justify-content: center;
+  overflow: hidden;
+  margin-bottom: 50px;
+
 }
 
-h1 {
+.main-title {
   text-align: center;
-  margin-bottom: 30px;
+  padding-left: 80px;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 150px;
+  margin-bottom: 20px;
 }
+
 
 .form-row {
   display: flex;
