--- a/login.css
+++ b/login.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     background: linear-gradient(135deg, #71CE97, #39684C);
     /*background-size: 400% 400%;*/
     /*animation: gradientShift 15s ease infinite;*/
@@ -13,8 +13,8 @@ body {
 
 #bg-logo {
     position: absolute;
-    margin-left: 50%;
-    width: 50%;
+    /*margin-left: 50%;
+    width: 50%;*/
     height: 100%;
     opacity: 0.5;
     z-index: 0;
@@ -29,7 +29,8 @@ body {
 
 
 .login-container {
-    background: white;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10sspx);
     padding: 40px;
     border-radius: 25px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
