--- a/dashboard.css
+++ b/dashboard.css
@@ -123,11 +123,112 @@ body {
 }
 
 .active {
-  background-color: #00894e;
-  color: white;
   border-radius: 0 15px 15px 0;
 }
 
 .logout {
   margin-top: auto;
+}
+
+.main {
+  margin-top: 150px;
+  margin-left: 200px; 
+  font-size: 28px; 
+  
+}
+
+.main h1 {
+  font-size: 36px;
+  font-family: 'Arial', sans-serif;
+}
+
+.main p {
+  font-size: 20px;
+  font-family: 'Arial', sans-serif;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  gap: 50px;
+  margin-left: 180px; 
+}
+
+.card {
+  background-color: #71CE7E;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  padding: 24px 32px;
+  margin: 16px;
+  display: inline-block;
+  vertical-align: top;
+  min-width: 200px;
+  width: 295px;
+  height: 200px;
+}
+
+.card p {
+  margin: 10px 0 30px 0;
+  color: #000000;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card h1 {
+  margin: 10px 0 30px 0;
+  font-size: 35px;
+  color: #222;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card button {
+  background-color: #2E7D32;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.card button:hover {
+  background-color: #1B5E20;
+}
+
+.search-bar-container {
+  float: right;
+  margin-top: -80px;
+  gap: 10px;
+  margin-right: 20px;
+}
+
+.search-input {
+  padding: 10px 15px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  font-size: 14px;
+  width: 200px;
+}
+
+.search-button {
+  padding: 10px 15px;
+  background-color: #71CE7E;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.search-button:hover {
+  background-color: #006f3d;
+}
+
+.top-content {
+  flex-direction: column;
 }
